k8s/adminer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o k8s
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: adminer
  name: adminer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: adminer
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o k8s
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: adminer
    spec:
      containers:
        - image: adminer
          name: adminer
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
