k8s/auth-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o k8s
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: auth-service
  name: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: auth-service
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o k8s
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: auth-service
    spec:
      containers:
        - env:
            - name: DB_DB
              value: alie_db
            - name: DB_HOST
              value: postgres
            - name: DB_PASSWORD
              value: pass
            - name: DB_PORT
              value: "5432"
            - name: DB_USER
              value: root
            - name: PORT
              value: "80"
            - name: SECRET
              value: setsecretink8ssecretforprod
          image: harbor.alie.javeriana.edu.co/images/auth-service:latest
          name: auth-service
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: "1500m"
              memory: "1024Mi"
            requests:
              cpu: "500m"
              memory: "512Mi"
      restartPolicy: Always
