k8s/front-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -o k8s
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: front-api
  name: front-api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: front-api
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -o k8s
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: front-api
    spec:
      containers:
        - env:
            - name: COCKROACHDB_USER
              valueFrom:
                configMapKeyRef:
                  name: db-config
                  key: db-user
            - name: COCKROACHDB_PASS
              valueFrom:
                secretKeyRef:
                  name: db-secret
                  key: db-pass
            - name: COCKROACHDB_HOST
              valueFrom:
                configMapKeyRef:
                  name: db-config
                  key: db-host
            - name: COCKROACHDB_PORT
              valueFrom:
              configMapKeyRef:
                  name: db-config
                  key: db-port
            - name: MONGO_URI
              valueFrom:
                secretKeyRef:
                  name: connection-str
                  key: connectionString.standard
            - name: PINECONE_API_KEY
              value: "Placeholder"
          image: harbor.alie.javeriana.edu.co/images/front_api:latest
          name: front-api
          ports:
            - containerPort: 5000
              protocol: TCP
      restartPolicy: Always
