k8s/mongo-express-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o k8s
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: mongo-express
  name: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongo-express
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o k8s
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: mongo-express
    spec:
      containers:
        - env:
          - name: ME_CONFIG_BASICAUTH_USERNAME
            value: admin
          - name: ME_CONFIG_BASICAUTH_PASSWORD
            value: admin
          - name: ME_CONFIG_MONGODB_URL
            valueFrom:
              secretKeyRef:
                key: connectionString.standard
                name: connection-str
          image: mongo-express:latest
          name: mongo-express
          ports:
            - containerPort: 8081
              protocol: TCP
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
            requests:
              cpu: "0.1"
              memory: "256Mi"
      restartPolicy: Always
