k8s/auth-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o k8s
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: auth-service
  name: auth-service
spec:
  ports:
    - name: "2000"
      port: 2000
      targetPort: 80
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: auth-service
