k8s/front_api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -o k8s
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: front-api
  name: front_api
spec:
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
  selector:
    io.kompose.service: front-api
