k8s/mongo-express-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o k8s
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: mongo-express
  name: mongo-express
spec:
  ports:
    - name: "8082"
      port: 8082
      targetPort: 8081
  selector:
    io.kompose.service: mongo-express
