k8s/mongex-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adminer-ingress
spec:
  ingressClassName: traefik
  rules:
  - host: mongex.alie.javeriana.edu.co
    http:
      paths:
      - backend:
          service:
            name: mongo-express
            port:
              name: "http"
        path: /
        pathType: Prefix
